--- a/package.json
+++ b/package.json
@@ -30,14 +30,15 @@
     "@nestjs/typeorm": "^11.0.0",
     "@nestjs/websockets": "^11.1.3",
     "bcrypt": "^6.0.0",
-    "cache-manager-ioredis": "^2.1.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.2",
     "crypto": "^1.0.1",
+    "ioredis": "^5.6.1",
     "mysql2": "^3.14.1",
     "pg": "^8.16.0",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1",
+    "socket.io-client": "^4.8.1",
     "typeorm": "^0.3.24"
   },
   "devDependencies": {
